# Can-I-Haz-Warnings

./: .lgtm.yml  CMakeLists.txt  README.md
.github/workflows/: CodeCoverage.yml  CodeQLAnalysis.yml  CoverityScan.yml  Linux.yml  MacOS.yml  StaticAnalysis.yml  StyleCheck.yml  Windows.yml
include/: Application.hpp  Location.hpp  Warning.hpp  WarningDatabase.hpp
include/Parser/: CppCheck.hpp
samples/: .clang-tidy
samples/MemoryLeaks/: MallocLeak.c  NewLeak.cpp
samples/OutOfBounds/: IndexOutOfBounds.c  strcpy.c
samples/ResourceLeak/: FileHandle.c
samples/Style/: ModerinzeUseUsing.c  ReservedIdentifer.c  VariableShadowing.c
samples/SyntaxErrors/: MissingIncludeFile.c
src/: Application.cpp  Location.cpp  Warning.cpp  WarningDatabase.cpp  main.cpp
src/Parser/: CppCheck.cpp
tests/: CMakeLists.txt
tests/Fuzzing/: CMakeLists.txt
tests/Fuzzing/src/: ApplicationArgs.fuzz.cpp  Parser.fuzz.cpp
tests/Livetests/: CMakeLists.txt
tests/Livetests/src/: ClangTidy.live.test.cpp  CppCheck.live.test.cpp
tests/Unittests/src/: Location.test.cpp
tests/Unittests/src/Parser/: CppCheck.test.cpp
tests/src/Parser/: CppCheck.test.cpp
