cmake_minimum_required(VERSION 3.10.2)

project("Can-I-Haz-Warnings" LANGUAGES CXX)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

# Add tools
file(GLOB CHW_HEADERS "")
FILE(GLOB CHW_SOURCES "src/main.cpp")

add_executable(${PROJECT_NAME} ${CHW_SOURCES} ${CHW_HEADERS})
